# config-provider

./: .ghci  .gitignore  .hlint.yaml  CHANGELOG.md  Makefile  README.md  app.json  app.qa.json  config-provider.cabal
app/: Class.hs  Main.hs  TH.hs
examples/scotty/: Main.hs  config-provider-scotty-example.cabal
src/System/Environment/: Config.hs
src/System/Environment/Config/: Base.hs  Default.hs  Helpers.hs  Reader.hs  Source.hs  Types.hs
test/: SpecHelper.hs
test/Fixtures/: EnvData.hs  config.ini  config.json  config.xml  config.yaml  vault.json
test/System/Environment/: ConfigSpec.hs
test/System/Environment/Config/: DefaultSpec.hs  HelpersSpec.hs  ReaderSpec.hs  TypesSpec.hs
