cabal-version: >=1.10
name: config-provider
version: 0.0.1
license: MIT
license-file: LICENSE.md
maintainer: justin@promise.io
author: Justin Christensen
synopsis: Configuration reader inspired by ASP.NET Core's ConfigurationProvider
category: System
build-type: Simple
extra-source-files:
    *.md

library
    exposed-modules:
        System.Environment.Config
        System.Environment.Config.Default
        System.Environment.Config.Helpers
        System.Environment.Config.Types
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base >=4.11 && <4.12,
        mtl ==2.2.*,
        scientific ==0.3.*,
        text ==1.2.*,
        bytestring ==0.10.*,
        aeson ==1.4.*,
        exceptions ==0.10.*,
        xeno ==0.3.*,
        yaml ==0.11.*,
        ini ==0.4.*,
        unordered-containers ==0.2.*,
        vector ==0.12.*

executable config-provider
    main-is: Main.hs
    hs-source-dirs: app
    default-language: Haskell2010
    other-modules:
        Paths_config_provider
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.11 && <4.12,
        config-provider -any

test-suite config-provider-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules:
        Paths_config_provider
        SpecHelper
        Fixtures.EnvData
        System.Environment.ConfigSpec
        System.Environment.Config.DefaultSpec
    default-language: Haskell2010
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.7 && <5,
        hspec ==2.6.*,
        aeson ==1.4.*,
        text ==1.2.*,
        containers ==0.6.*,
        unordered-containers ==0.2.*,
        mtl ==2.2.*,
        config-provider -any