cabal-version: >=1.10
name: config-provider
version: 0.0.1
license: MIT
license-file: LICENSE.md
maintainer: justin@promise.io
author: Justin Christensen
synopsis: Configuration reader inspired by ASP.NET Core's ConfigurationProvider
category: System
build-type: Simple
extra-source-files:
    *.md

library
    exposed-modules:
        System.Environment.Config
        System.Environment.Config.Default
        System.Environment.Config.Base
        System.Environment.Config.Source
        System.Environment.Config.Types
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall -Wno-type-defaults
    build-depends:
        base >=4.11 && <4.12,
        transformers ==0.5.5.*,
        mtl ==2.2.*,
        scientific ==0.3.*,
        text ==1.2.*,
        bytestring ==0.10.*,
        aeson ==1.4.*,
        exceptions ==0.10.*,
        xeno ==0.3.*,
        yaml ==0.11.*,
        ini ==0.4.*,
        data-default ==0.7.1.*,
        unordered-containers ==0.2.9.*,
        containers ==0.5.11.*,
        vector ==0.12.*

executable config-provider
    main-is: Main.hs
    hs-source-dirs: app
    default-language: Haskell2010
    other-modules:
        Paths_config_provider
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.11 && <4.12,
        exceptions ==0.10.*,
        transformers ==0.5.5.*,
        mtl ==2.2.*

test-suite config-provider-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules:
        Paths_config_provider
        SpecHelper
        Fixtures.EnvData
        System.Environment.Config.DefaultSpec
        System.Environment.Config.BaseSpec
        System.Environment.Config.ReaderSpec
        System.Environment.Config.TypesSpec
    default-language: Haskell2010
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.7 && <5,
        hspec ==2.6.*,
        aeson ==1.4.*,
        scientific ==0.3.*,
        config-provider -any