cabal-version: >=1.10
name: config-provider-scotty-example
version: 0.1.0.0
synopsis: Config provider example with Scotty
license: MIT
author: Justin Christensen
maintainer: justin@promise.io
build-type: Simple

executable config-provider-scotty-example
    main-is: Main.hs
    build-depends:       
        base >=4.11 && <4.12,
        scotty ==0.11.*,
        fast-logger ==2.4.*,
        config-provider -any
    default-language: Haskell2010
